Devops_dev/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: observability-service
spec:
  type: LoadBalancer
  selector:
    app: observability-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
